feat: add toggle sidebar depends on mobile or desktop

--- a/src/core/components/header/header.component.html
+++ b/src/core/components/header/header.component.html
@@ -1,5 +1,8 @@
 <header class="header">
   <!-- <input type="text" /> -->
+  <button (click)="toggleSidebar()">
+    <i-feather name="menu"></i-feather>
+  </button>
   <span>search</span>
 
   <div class="header__profile">
