--- a/src/core/components/layout/layout.component.scss
+++ b/src/core/components/layout/layout.component.scss
@@ -6,7 +6,20 @@
 
   #content {
     flex: 1;
-    padding: 1.5rem;
+    padding: 2rem;
     overflow: auto;
+
+    &.content__wrapper {
+      transition: 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+      margin-left: 80px;
+
+      &-expanded {
+        margin-left: 260px;
+      }
+
+      &-mobile {
+        margin-left: 0px;
+      }
+    }
   }
 }
