--- a/src/core/components/sidebar/sidebar.component.scss
+++ b/src/core/components/sidebar/sidebar.component.scss
@@ -27,7 +27,6 @@
   $sidebar: &;
 
   &__header {
-    display: flex;
     height: 60px;
     display: flex;
     align-items: center;
@@ -46,6 +45,11 @@
     }
 
     &:not(#{$collapsed}-expanded) {
+      #{$sidebar}__header {
+        padding-right: 20px;
+        padding-left: 20px;
+      }
+
       #{$sidebar}__logo {
         h2 {
           display: none;
